[update] memberNum to workspaceData
